# airow

./: .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
.cursor/rules/: python-general.mdc  tests.mdc
airow/: __init__.py  agent.py  airow.py
