[project]
name = "airow"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.2",
    "pydantic-ai>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]

[tool.setuptools.dynamic]
version = {attr = "airow.__version__"}
