[project]
name = "airow"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.8.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]

[tool.setuptools.dynamic]
version = {attr = "airow.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
